# mytorch-draft

./: -  .gitignore  CMakeLists.txt  Makefile  README.md  _todo  bindings.cpp  example.cpp  example_Makefile  pyproject.toml  tensor.cpp  tensor.h  test_tensor  test_tensor.cpp
notebooks/.ipynb_checkpoints/: stress_test-checkpoint.ipynb
src/cpp/: bindings.cpp  cuda_utils.h  kernels.cu  kernels.cuh  pointwise.cu  pointwise.cuh  reduce.cu  reduce.cuh  shared_utils.cpp  shared_utils.h  tensor.cpp  tensor.h  utils.cu  utils.cuh
src/python/mytorch/: __init__.py
tests/cpp/: bench_matmul.cpp  debug_matmul.cpp  test_tensor.cpp
tests/python/: test_ops.py
