#[build-system]
#requires = ["scikit-build-core", "pybind11"]
#build-backend = "scikit_build_core.build"

[project]
name = "mytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cuda-python>=13.1.1",
    "pip>=26.0.1",
    "pybind11>=3.0.2",
    "pytest>=9.0.2",
]
